--- a/gregs-list.html
+++ b/gregs-list.html
@@ -15,7 +15,7 @@
 		<div class="searchbar">
 			<form>
 				<label>Search Jobs</label>
-				<input placeholder="Developer, Designer, Internship..."></input>
+				<input placeholder="Search software jobs"></input>
 				<button><img src="magnifying-glass.png" class="picture"></button>
 			</form>
 		</div>
